test/fix: Accessibility tests and fixes

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -73,7 +73,7 @@
                             <thead>
                                 <tr>
                                     <th scope="col" class="bg-yellow-light weight-semibold">Item</th>
-                                    <th scope="col" class="bg-yellow-light weight-semibold"></th>
+                                    <td scope="col" class="bg-yellow-light weight-semibold"></td>
                                     <th scope="col" class="bg-yellow-light weight-semibold">Price</th>
                                     <th scope="col" class="bg-yellow-light weight-semibold">Quantity</th>
                                     <th scope="col" class="bg-yellow-light weight-semibold">Subtotal</th>
