--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="row bg-light-grey px-3 py-4">
+                <div class="row border-top border-1 border-secondary px-3 py-4">
 
                     <!-- Order Details -->
                     <div class="col-12">
