--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -20,8 +20,8 @@
                 {% csrf_token %}
 
                 <!-- Form Inputs -->
-                {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
-                {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+                {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:New Password"|attr:"autocomplete:new-password" }}
+                {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Repeat New Password"|attr:"autocomplete:new-password" }}
 
                 <div class="button-group mt-4 d-flex justify-content-end">
                     <!-- Home Button -->
