--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- Close Button -->
-        <button type="button" class="ml-2 mb-1 close toast-close bg-ib-light text-mid-grey float-end" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="ml-2 mb-1 close toast-close bg-ib-light text-dark-grey float-end" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
