--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -12,6 +12,7 @@
                     data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
+                        <span class="sr-only">Decrease Quantity</span>
                     </span>
                 </button>
             </div>
@@ -19,13 +20,14 @@
             <!-- Quantity Input -->
             <input class="form-control qty_input qty-input-sm ib-form-field font-body weight-semibold id_qty_{{ item.item_id }}" type="number"
                 name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                data-item_id="{{ item.item_id }}">
+                data-item_id="{{ item.item_id }}" aria-label="Quantity">
 
             <!-- Increment Button -->
             <div class="input-group-append">
                 <button class="increment-qty increment-qty-sm bg-blue text-ib-light weight-bold btn rounded-0 d-flex justify-content-center align-items-center increment-qty_{{ item.item_id }}"
                     data-item_id="{{ item.item_id }}">
                     <i class="fas fa-plus fa-sm"></i>
+                    <span class="sr-only">Increase Quantity</span>
                 </button>
             </div>
 
