--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -20,9 +20,9 @@
         {% csrf_token %}
 
         <!-- Form Inputs -->
-        {{ form.oldpassword|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
-        {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
-        {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+        {{ form.oldpassword|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Old Password"|attr:"autocomplete:password" }}
+        {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:New Password"|attr:"autocomplete:new-password" }}
+        {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Repeat New Password"|attr:"autocomplete:new-password" }}
 
     
         <div class="button-group mt-4 d-flex justify-content-end">
