--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -20,7 +20,7 @@
         {% csrf_token %}
 
         <!-- Form Inputs -->
-        {{ form.password|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+        {{ form.password|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:New Password"|attr:"autocomplete:new-password" }}
 
         <div class="button-group mt-4 d-flex justify-content-end">
             <!-- Home Button -->
