--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1182,23 +1182,19 @@ label[for="id_price"] {
 
 #category-links div {
     background-color: var(--dark-grey);
-    border-radius: 20%;
     width: 100px;
-    height: 100px; 
+    height: 100px;
+    border-radius: 10%;
+    overflow: hidden;
 }
 
 #category-links i {
     font-size: 24px; 
 }
 
-#category-links {
-    overflow: hidden;
-}
-
 #category-links a {
     width: 100%;
     height: 100%;
-    border-radius: 20%;
 }
 
 #category-links a:hover {
@@ -1482,6 +1478,16 @@ label[for="id_price"] {
 
 /* Profile Page */
 
+.profile-review-container,
+.order-history {
+    max-height: 500px;
+    overflow-y: auto;
+}
+
+#profile-review-div {
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
+}
+
 .profile-review-product {
     font-size: 20px;
 }
@@ -1490,9 +1496,23 @@ label[for="id_price"] {
     font-size: 18px;
 }
 
-.order-history {
-    max-height: 600px;
-    overflow-y: auto;
+.unapproved {
+    border: var(--warning-light-hov) 2px solid;
+}
+
+.approval-container {
+    width: fit-content;
+}
+
+.approval-container div {
+    border-radius: 5px 5px 0 0 ;
+    border-top: var(--warning-light-hov) 2px solid;
+    border-left: var(--warning-light-hov) 2px solid;
+    border-right: var(--warning-light-hov) 2px solid;
+}
+
+.footer-buffer {
+    height: 30px;
 }
 
 
@@ -1739,5 +1759,12 @@ label[for="id_price"] {
 
     .thumbnail-image {
         width: 70px;
+    }
+
+    /* Profile Page */
+
+    .profile-review-container,
+    .order-history {
+        max-height: 350px;
     }
 }
