--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1180,8 +1180,7 @@ label[for="id_price"] {
 
 /* Home Page Category Links */
 
-#category-links div {
-    background-color: var(--dark-grey);
+.category-button {
     width: 100px;
     height: 100px;
     border-radius: 10%;
@@ -1192,12 +1191,7 @@ label[for="id_price"] {
     font-size: 24px; 
 }
 
-#category-links a {
-    width: 100%;
-    height: 100%;
-}
-
-#category-links a:hover {
+#category-links a:hover .category-button {
     background-color: var(--yellow);
     color: var(--dark-grey);
     transition: all .2s ease-in-out;
