--- a/templates/base.html
+++ b/templates/base.html
@@ -19,14 +19,20 @@
         <title>Island Bees {% block extra_title %}{% endblock %}</title>
 
         {% block corecss %}
-        <!-- CSS -->
+        
+        <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png">
+        <link rel="android-chrome-icon" type="image/png" sizes="192x192" href="{{ MEDIA_URL }}android-chrome-192x192.png">
+        <link rel="android-chrome-icon" type="image/png" sizes="512x512" href="{{ MEDIA_URL }}android-chrome-512x512.png">
         <link rel="manifest" href="{{ MEDIA_URL }}site.webmanifest">
+
+        <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
         {% endblock %}
 
         {% block corejs %}
