--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
         <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png">
-        <link rel="android-chrome-icon" type="image/png" sizes="192x192" href="{{ MEDIA_URL }}android-chrome-192x192.png">
-        <link rel="android-chrome-icon" type="image/png" sizes="512x512" href="{{ MEDIA_URL }}android-chrome-512x512.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="{{ MEDIA_URL }}android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="{{ MEDIA_URL }}android-chrome-512x512.png">
         <link rel="manifest" href="{{ MEDIA_URL }}site.webmanifest">
 
         <!-- CSS -->
